--- a/landing.html
+++ b/landing.html
@@ -328,7 +328,7 @@
     </div>
     <div class="feature-card">
       <h3>Share Expenses, Share Control</h3>
-      <p>Collaborate, track, and manage family finances together because financial transparency builds trust.</p>
+      <p>myrrrrrr.</p>
     </div>
     <div class="feature-card">
       <h3>Pretty. Practical. Powerful.</h3>
